@@ -6,12 +6,12 @@ module main(input clk);
   initial begin
     counter = 1;
     // expected to pass
-    assert(counter == 1);
+    p0: assert(counter == 1);
     counter = 2;
   end
 
   // expected to pass
-  initial assert property (counter == 2);
+  initial p1: assert property (counter == 2);
 
   always_ff @(posedge clk)
     counter = counter + 1;
